# XQlightweight

./: .gitignore  README.md  biome.jsonc  deno.jsonc  dist2.js  index.html  package.json  run-tests.sh  test-setup.ts  test_test.ts  tsconfig.json  vite.config.ts  vitest.config.ts  xiangqi-ai.js  xiangqi-ai.ts
.gemini/: settings.json
docs/: index.html
docs/assets/: WebGLRenderer-BEHmVx5i.js  WebGPURenderer-B3pCbSW3.js  browserAll-BW3qpief.js  index-AOKowkob.js  index-AOKowkob.js.map  index-B5W2rOLj.js  index-BTFSO5-T.js  index-BZdJYc8J.js  index-Bf87HmbC.js  index-Bf87HmbC.js.map  index-Bkb7ihK0.js  index-BliNMjgI.js  index-BsvbOke5.js  index-Bz9OeQFZ.js  index-C0aN2y23.js  index-C2avPGx1.css  index-CCjMHnHt.js  index-CG4k5sjd.js  index-CJ9BqA51.js  index-CMoycvOM.js  index-CNZNfMjk.css  index-CkF_kB88.js  index-CoZGlZ1J.css  index-CtZTitZ3.js  index-D8qg2T6J.js  index-DB9nH-bX.css  index-DDm2IwS5.js  index-DJsDxMst.css  index-DP_zqBRM.js  index-DbMmxZVX.js  index-Dp-6NruU.js  index-LUu69gYM.js  index-Ph0EpiKU.js  index-Ph0EpiKU.js.map  index-T2wi9k-n.css  index-T3UzrymL.js  index-V90ZHRpw.js  index-Y07tBwcc.js  index-ZREX4EUR.js  index-f4f936a7.js  (+7 more)
src/: App.css  App.tsx  actors.ts  board.ts  book.ts  constants.ts  custom-loader.ts  excalibur-board.ts  index.css  index.ts  main.ts  main.tsx  position.ts  resources.ts  search.ts  test_test.ts  ui-actors.ts  xiangqi-ai.ts
src/components/: Game.css  Game.tsx  RestartModal.css  RestartModal.tsx  SettingsModal.css  SettingsModal.tsx  UI.css  (+1 more)
xq-engine-wasm/: Cargo.toml  PLAN.md
xq-engine-wasm/src/: lib.rs  main.rs
(+28 files in other folders)
